Social Sharing buttons

--- a/src/Datenschutz.njk
+++ b/src/Datenschutz.njk
@@ -11,7 +11,8 @@ date: 2024-04-28
       <div class="u-clearfix u-sheet u-sheet-1">
         <h3 class="u-text u-text-default u-text-1">Datenschutz</h3>
         <p class="u-text u-text-default u-text-2">
-          <br> 1) Einleitung und Kontaktdaten des Verantwortlichen
+          <br> 
+1) Einleitung und Kontaktdaten des Verantwortlichen<br/>
           1.1 Wir freuen uns, dass Sie unsere Website besuchen und bedanken uns für Ihr
 Interesse. Im Folgenden informieren wir Sie über den Umgang mit Ihren
 personenbezogenen Daten bei der Nutzung unserer Website. Personenbezogene Daten
@@ -22,7 +23,9 @@ Datenschutz-Grundverordnung (DSGVO) ist SteTho OG, Mariahilfer Straße 136/1.10,
 die Verarbeitung von personenbezogenen Daten Verantwortliche ist diejenige natürliche
 oder juristische Person, die allein oder gemeinsam mit anderen über die Zwecke und
 Mittel der Verarbeitung von personenbezogenen Daten entscheidet.
-          2) Datenerfassung beim Besuch unserer Website
+          <br/>
+          <br/>
+2) Datenerfassung beim Besuch unserer Website<br/>
           2.1 Bei der bloß informatorischen Nutzung unserer Website, also wenn Sie sich nicht
 registrieren oder uns anderweitig Informationen übermitteln, erheben wir nur solche
 Daten, die Ihr Browser an den Seitenserver übermittelt (sog. „Server-Logfiles“). Wenn
@@ -39,10 +42,10 @@ Anhaltspunkte auf eine rechtswidrige Nutzung hinweisen.
 personenbezogener Daten und anderer vertraulicher Inhalte (z.B. Bestellungen oder
 Anfragen an den Verantwortlichen) eine SSL-bzw. TLS-Verschlüsselung. Sie können eine
 verschlüsselte Verbindung an der Zeichenfolge „https://“ und dem Schloss-Symbol in
-Ihrer Browserzeile erkennen. <br>
-          <br>
-          <br>
-          <br> 3) Cookies
+Ihrer Browserzeile erkennen.
+          <br/>
+          <br/>
+3) Cookies<br/>
           Um den Besuch unserer Website attraktiv zu gestalten und die Nutzung bestimmter
 Funktionen zu ermöglichen, verwenden wir Cookies, also kleine Textdateien, die auf
 Ihrem Endgerät abgelegt werden. Teilweise werden diese Cookies nach Schließen des
@@ -62,7 +65,9 @@ werden und einzeln über deren Annahme entscheiden oder die Annahme von Cookies
 für bestimmte Fälle oder generell ausschließen können.
           Bitte beachten Sie, dass bei Nichtannahme von Cookies die Funktionalität unserer
 Website eingeschränkt sein kann.
-          4) Kontaktaufnahme
+          <br/>
+          <br/>
+4) Kontaktaufnahme<br/>
           Im Rahmen der Kontaktaufnahme mit uns (z.B. per Kontaktformular oder E-Mail) werden
 – ausschließlich zum Zweck der Bearbeitung und Beantwortung Ihres Anliegens und nur
 im dafür erforderlichen Umfang – personenbezogene Daten verarbeitet.
@@ -72,7 +77,9 @@ Kontaktierung auf einen Vertrag ab, so ist zusätzliche Rechtsgrundlage für d
 Verarbeitung Art. 6 Abs. 1 lit. b DSGVO. Ihre Daten werden gelöscht, wenn sich aus den
 Umständen entnehmen lässt, dass der betroffene Sachverhalt abschließend geklärt ist
 und sofern keine gesetzlichen Aufbewahrungspflichten entgegenstehen.
-          5) Nutzung von Kundendaten zur Direktwerbung
+          <br/>
+          <br/>
+          5) Nutzung von Kundendaten zur Direktwerbung<br/>
           Anmeldung zu unserem E-Mail-Newsletter
           Wenn Sie sich zu unserem E-Mail Newsletter anmelden, übersenden wir Ihnen
 regelmäßig Informationen zu unseren Angeboten. Pflichtangabe für die Übersendung
@@ -97,7 +104,9 @@ Newsletter-Verteiler gelöscht, soweit Sie nicht ausdrücklich in eine weitere
 Daten eingewilligt haben oder wir uns eine darüberhinausgehende Datenverwendung
 vorbehalten, die gesetzlich erlaubt ist und über die wir Sie in dieser Erklärung
 informieren.
-          6) Datenverarbeitung zur Bestellabwicklung
+          <br/>
+          <br/>
+          6) Datenverarbeitung zur Bestellabwicklung<br/>
           Soweit für die Vertragsabwicklung zu Liefer- und Zahlungszwecken erforderlich, werden
 die von uns erhobenen personenbezogenen Daten gemäß Art. 6 Abs. 1 lit. b DSGVO an
 das beauftragte Transportunternehmen und das beauftragte Kreditinstitut
@@ -115,7 +124,9 @@ nur insoweit verarbeitet, wie dies für die jeweilige Information erforderlich 
 Dienstleister(n) zusammen, die uns ganz oder teilweise bei der Durchführung
 geschlossener Verträge unterstützen. An diese Dienstleister werden nach Maßgabe der
 folgenden Informationen gewisse personenbezogene Daten übermittelt.
-          7) Seitenfunktionalitäten
+          <br/>
+          <br/>
+          7) Seitenfunktionalitäten<br/>
 7.1 Facebook-Plugins
           Auf unserer Website werden Plugins des sozialen Netzwerkes des folgenden Anbieters
 verwendet: Meta Platforms Ireland Ltd., 4 Grand Canal Square, Grand Canal Harbour,
@@ -178,7 +189,9 @@ Weitergabe an Dritte untersagt.
 EU-US-Datenschutzrahmen (EU-US Data Privacy Framework) angeschlossen, das auf
 Basis eines Angemessenheitsbeschlusses der Europäischen Kommission die Einhaltung
 des europäischen Datenschutzniveaus sicherstellt.
-          8) Rechte des Betroffenen
+          <br/>
+          <br/>
+8) Rechte des Betroffenen<br/>
           8.1 Das geltende Datenschutzrecht gewährt Ihnen gegenüber dem Verantwortlichen
 hinsichtlich der Verarbeitung Ihrer personenbezogenen Daten die nachstehenden
 Betroffenenrechte (Auskunfts- und Interventionsrechte), wobei für die jeweiligen
@@ -207,7 +220,9 @@ ZWECKE DERARTIGER WERBUNG EINZULEGEN. SIE KÖNNEN DEN WIDERSPRUCH WIE
 OBEN BESCHRIEBEN AUSÜBEN.
           MACHEN SIE VON IHREM WIDERSPRUCHSRECHT GEBRAUCH, BEENDEN WIR DIE
 VERARBEITUNG DER BETROFFENEN DATEN ZU DIREKTWERBEZWECKEN.&nbsp;<br>
-          <br>9) Dauer der Speicherung personenbezogener Daten
+          <br/>
+          <br/>
+9) Dauer der Speicherung personenbezogener Daten<br/>
           Die Dauer der Speicherung von personenbezogenen Daten bemisst sich anhand der
 jeweiligen Rechtsgrundlage, am Verarbeitungszweck und – sofern einschlägig –
 zusätzlich anhand der jeweiligen gesetzlichen Aufbewahrungsfrist (z.B. handels- und
