--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -127,7 +127,7 @@
 
     {{ content | safe }}
 
-    <footer class="u-clearfix u-footer u-palette-4-dark-2 u-footer" id="sec-d120" data-href="mailto:office@qinkel.com?subject=Frangen%2C%20Anregungen%2C%20W%C3%BCnsche"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-clearfix u-footer u-palette-4-dark-2 u-footer" id="sec-d120"><div class="u-clearfix u-sheet u-sheet-1">
       <div class="data-layout-selected u-clearfix u-expanded-width u-gutter-30 u-layout-wrap u-layout-wrap-1">
         <div class="u-gutter-0 u-layout">
           <div class="u-layout-row">
