--- a/src/css/Startseite.css
+++ b/src/css/Startseite.css
@@ -1217,3 +1217,22 @@
 .right-clickable-area {
   right: 0;
 }
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+th, td {
+  border: none;
+  padding: 8px;
+}
+th:nth-child(1),
+td:nth-child(1) {
+  /*width: 60%;*/
+  text-align: right;
+}
+th:nth-child(2),
+td:nth-child(2) {
+  /*width: 40%;*/
+  text-align: left;
+}
