--- a/src/index.njk
+++ b/src/index.njk
@@ -10,7 +10,7 @@ date: 2020-12-05
 
     <section class="u-align-center u-clearfix u-image u-shading u-section-1" id="carousel_830e" data-image-width="2000" data-image-height="2000">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-text u-text-body-alt-color u-text-default u-text-1"> Entdecke mit den  Qinkel Magnetkugeln wieder Deine Kreativität!</h2>
+        <h2 class="u-text u-text-body-alt-color u-text-default u-text-1"> Entdecke mit den Qinkel Magnetkugeln wieder Deine Kreativität!</h2>
       </div>
     </section>
     <section class="u-align-center u-clearfix u-container-align-center-xs u-grey-5 u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-section-2" id="carousel_63e2">
@@ -91,88 +91,67 @@ date: 2020-12-05
       </p>
       <img class="u-expanded-width-xs u-image u-image-1" src="images/prodbild1.jpg?rand=081e" data-image-width="1080" data-image-height="809">
       <div class="custom-expanded u-clearfix u-custom-html u-custom-html-1">
-        <div id="mc_embed_shell">
-          <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
-          <style type="text/css"> #mc_embed_signup{background:#fff; false;clear:left; font:14px Helvetica,Arial,sans-serif; width: 600px;}
-        /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-           We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */ </style>
-          <div id="mc_embed_signup">
-            <form action="https://qinkel.us10.list-manage.com/subscribe/post?u=9f0e1a607e01ca48c99fd77c1&amp;id=b9976e538b&amp;f_id=0030dee5f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-              <div id="mc_embed_signup_scroll">
-                <div class="indicates-required">
-                  <span class="asterisk">*</span> indicates required
-                </div>
-                <div class="mc-field-group">
-                  <label for="mce-EMAIL">E-Mail-Adresse <span class="asterisk">*</span>
-                  </label>
-                  <input type="email" name="EMAIL" class="email required" id="mce-EMAIL" required="" value="">
-                </div>
-                <div class="mc-field-group">
-                  <label for="mce-FNAME">Vorname </label>
-                  <input type="text" name="FNAME" class="text" id="mce-FNAME" value="">
-                </div>
-                <div class="mc-field-group">
-                  <label for="mce-LNAME">Nachname </label>
-                  <input type="text" name="LNAME" class="text" id="mce-LNAME" value="">
-                </div>
-                <div class="mc-field-group size1of2">
-                  <label for="mce-BIRTHDAY-month">Geburtstag </label>
-                  <div class="datefield">
-                    <span class="dayfield subfield">
-                      <input class="REQ_CSS birthday" type="text" pattern="[0-9]*" placeholder="DD" size="2" maxlength="2" name="BIRTHDAY[day]" id="mce-BIRTHDAY-day" value="">
-                    </span> /<span class="monthfield subfield">
-                      <input class="REQ_CSS birthday" type="text" pattern="[0-9]*" placeholder="MM" size="2" maxlength="2" name="BIRTHDAY[month]" id="mce-BIRTHDAY-month" value="">
-                    </span>
-                    <span class="nowrap small-meta">( dd / mm )</span>
-                  </div>
-                </div>
-                <div class="mc-field-group">
-                  <label for="mce-MMERGE6">EAN Code (auf der Rückseite der Verpackung) </label>
-                  <input type="text" name="MMERGE6" class="text" id="mce-MMERGE6" value="">
-                </div>
-                <div id="mce-responses" class="clear foot">
-                  <div class="response" id="mce-error-response" style="display: none;"></div>
-                  <div class="response" id="mce-success-response" style="display: none;"></div>
-                </div>
-                <div aria-hidden="true" style="position: absolute; left: -5000px;"> /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */ <input type="text" name="b_9f0e1a607e01ca48c99fd77c1_b9976e538b" tabindex="-1" value="">
-                </div>
-                <div class="optionalParent">
-                  <div class="clear foot">
-                    <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
-                    <p style="margin: 0px auto;">
-                      <a href="http://eepurl.com/iIbKhw" title="Mailchimp – Einfaches, schnelles E-Mail-Marketing">
-                        <span style="display: inline-block; background-color: transparent; border-radius: 4px;">
-                          <img class="refferal_badge" src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg" alt="Intuit Mailchimp" style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;">
-                        </span>
-                      </a>
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </form>
+
+        <form 
+          action="/api/registerGuarantee" 
+          method="post" 
+          id="mc-embedded-subscribe-form" 
+          name="mc-embedded-subscribe-form" 
+          class="validate">
+          <div id="mc_embed_signup_scroll">
+
+          <table border="0">
+            <tbody>
+              <tr>
+                <td><label for="mce-EMAIL">E-Mail-Adresse <span class="asterisk">(*)</span>
+                    </label></td>
+                <td><input type="email" name="EMAIL" id="mce-EMAIL" size="30" maxlength=100 required placeholder="deine E-Mail-Adresse"></td>
+              </tr>
+              <tr>
+                <td><label for="mce-FNAME">Vornamen </label></td>
+                <td><input type="text" name="FIRSTNAME" class="text" size="30" maxlength=100 id="mce-FNAME" placeholder="deine Vornamen"></td>
+              </tr>
+              <tr>
+                <td><label for="mce-LNAME">Nachname </label></td>
+                <td><input type="text" name="LASTNAME" class="text" size="30" maxlength=100 id="mce-LNAME" placeholder="dein Nachname"></td>
+              </tr>
+              <tr>
+                <td><label for="mce-BIRTHDAY-month">Geburtstag</label></td>
+                <td><span class="dayfield subfield">
+                        <input class="REQ_CSS birthday" type="text" pattern="[0-9]*" placeholder="TT" size="4" maxlength="2" name="BIRTHDAY[day]" id="mce-BIRTHDAY-day" value="">
+                      </span> /<span class="monthfield subfield">
+                        <input class="REQ_CSS birthday" type="text" pattern="[0-9]*" placeholder="MM" size="4" maxlength="2" name="BIRTHDAY[month]" id="mce-BIRTHDAY-month" value="">
+                      </span>
+                      <br/>
+                      (z.B. 23/06)
+                </td>
+              </tr>
+              <tr>
+                <td><label for="mce-MMERGE6">EAN Code</label></td>
+                <td><input type="text" name="EANCODE" class="text" size="30" maxlength=100 id="mce-MMERGE6" value=""><br/>(auf der Rückseite der Verpackung)</td>
+              </tr>
+              <tr>
+                <td><label for="LEADCHANNEL">Wie hast du von Qinkel erfahren?</label></td>
+                <td><input type="text" name="LEADCHANNEL" class="text" size="30" maxlength=100 id="LEADCHANNEL" placeholder="z.B. Empfehlung von Freunden"></td>
+              </tr>
+              <tr>
+                <td><span class="asterisk">(*)</span> markieren Pflichtfelder</td>
+                <td>
+                  <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="u-border-none u-btn u-custom-color-4 u-hover-palette-4-light-1 u-radius" value="Registrieren">
+                </td>
+              </tr>
+            </tbody>
+          </table>
+
+          <div id="mce-responses" class="clear foot"> {#- Honepot - Field to trap Bots -#}
+            <input type="text" name="kundenNummer" class="text" id="kundenNummer" placeholder="Kundenummer">
           </div>
-          <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-          <script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[5]='BIRTHDAY';ftypes[5]='birthday';fnames[6]='MMERGE6';ftypes[6]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';/*
- * Translated default messages for the $ validation plugin.
- * Locale: DE
- */
-$.extend($.validator.messages, {
-  required: "Dieses Feld ist ein Pflichtfeld.",
-  maxlength: $.validator.format("Geben Sie bitte maximal  Zeichen ein."),
-  minlength: $.validator.format("Geben Sie bitte mindestens  Zeichen ein."),
-  rangelength: $.validator.format("Geben Sie bitte mindestens  und maximal {1} Zeichen ein."),
-  email: "Geben Sie bitte eine gültige E-Mail Adresse ein.",
-  url: "Geben Sie bitte eine gültige URL ein.",
-  date: "Bitte geben Sie ein gültiges Datum ein.",
-  number: "Geben Sie bitte eine Nummer ein.",
-  digits: "Geben Sie bitte nur Ziffern ein.",
-  equalTo: "Bitte denselben Wert wiederholen.",
-  range: $.validator.format("Geben Sie bitten einen Wert zwischen {0} und {1}."),
-  max: $.validator.format("Geben Sie bitte einen Wert kleiner oder gleich {0} ein."),
-  min: $.validator.format("Geben Sie bitte einen Wert größer oder gleich {0} ein."),
-  creditcard: "Geben Sie bitte ein gültige Kreditkarten-Nummer ein."
-});}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-        </div>
+
+        </form>
+        <script>
+          document.getElementById('mce-responses').style.display = 'none'; {#- hide the Honepot -#}
+        </script>
+
       </div>
     </section>
     <section class="u-clearfix u-grey-80 u-section-6" id="sec-51e5">
