--- a/src/Rueckgabe.njk
+++ b/src/Rueckgabe.njk
@@ -1,11 +1,9 @@
 ---
 layout: layouts/base.njk
-tags:
-  - nav
-navtitle: Kontakt
-title: "Qinkel Magnetkugeln - Kontakt"
-description: "Kontakt und Verbesserungsvorschläge"
-date: 2024-04-28
+title: "Qinkel Magnetkugeln - Rückgabe"
+description: "Informationen zu Widerruf und Rückgabe von Qinkel Bestellungen"
+slug: "rueckgabe"
+date: 2024-05-02
 ---
    <section class="u-clearfix" id="sec-a226">
       <div class="u-clearfix u-sheet u-sheet-1">
