--- a/src/garantie-registriert.njk
+++ b/src/garantie-registriert.njk
@@ -1,12 +1,10 @@
 ---
 layout: layouts/base.njk
-tags:
-  - nav
-navtitle: Kontakt
-title: "Vielen Dank für Ihre Bestellung!"
-description: "Dankeschön"
-permalink: "garantie-registriert.html"
-date: 2024-04-28
+title: "Vielen Dank für Ihre Registrierung!"
+description: "Bestätigungsseite nach erfolgreicher Registrierung der Garantie"
+permalink: "/garantie-registriert.html"
+slug: "garantie-registriert"
+date: 2024-05-06
 ---
     <section class="u-clearfix" id="sec-a226">
       <div class="u-clearfix u-sheet u-sheet-1">
