--- a/src/Datenschutz.njk
+++ b/src/Datenschutz.njk
@@ -1,10 +1,8 @@
 ---
 layout: layouts/base.njk
-tags:
-  - nav
-navtitle: Kontakt
-title: "Qinkel Magnetkugeln - Kontakt"
-description: "Kontakt und Verbesserungsvorschläge"
+title: "Qinkel Magnetkugeln - Datenschutz"
+description: "Datenschutzerklärung und Betroffenenrechte"
+slug: "datenschutz"
 date: 2024-04-28
 ---
     <section class="u-clearfix" id="sec-a226">
