--- a/src/Impressum.njk
+++ b/src/Impressum.njk
@@ -1,10 +1,8 @@
 ---
 layout: layouts/base.njk
-tags:
-  - nav
-navtitle: Kontakt
-title: "Qinkel Magnetkugeln - Kontakt"
-description: "Kontakt und Verbesserungsvorschläge"
+title: "Qinkel Magnetkugeln - Impressum"
+description: "Impressum und rechtliche Informationen zur Qinkel Webpräsenz"
+slug: impressum
 date: 2024-04-28
 ---
     <section class="u-clearfix" id="sec-a226">
