--- a/src/kontakt.njk
+++ b/src/kontakt.njk
@@ -1,10 +1,8 @@
 ---
 layout: layouts/base.njk
-tags:
-  - nav
-navtitle: Kontakt
 title: "Qinkel Magnetkugeln - Kontakt"
 description: "Kontakt und Verbesserungsvorschläge"
+slug: kontakt
 date: 2024-04-28
 ---
     <section class="u-clearfix" id="sec-a226">
