--- a/src/thanks.njk
+++ b/src/thanks.njk
@@ -1,10 +1,7 @@
 ---
 layout: layouts/base.njk
-tags:
-  - nav
-navtitle: Kontakt
 title: "Vielen Dank für Ihre Bestellung!"
-description: "Dankeschön"
+description: "Bestätigungsseite nach erfolgreicher Bestellung"
 date: 2024-04-28
 ---
     <section class="u-clearfix" id="sec-a226">
