--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -171,19 +171,19 @@
             </div>
             <div class="u-align-left u-container-style u-layout-cell u-size-29 u-layout-cell-3">
               <div class="u-container-layout u-container-layout-3">
-                <h1 class="u-text u-text-default u-text-palette-4-light-1 u-text-8">
+                <p class="u-text u-text-default u-text-palette-4-light-1 u-text-8">
                   <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-4-light-1 u-btn-4" data-href="https://nicepage.com">
                     <span style="font-weight: 700;"></span>&nbsp;<span style="text-decoration: underline !important;"></span>
                     <br>
                     <br>
                     <br>
                   </a>
-                </h1>
-                <h1 class="u-text u-text-default u-text-palette-4-light-1 u-text-9"> Hast Du Anregungen, Fragen, Wünsche?<br>Schreib uns eine
-                </h1>
-                <h1 class="u-text u-text-default u-text-palette-4-light-1 u-text-10">
+                </p>
+                <p class="u-text u-text-default u-text-palette-4-light-1 u-text-9"> Hast Du Anregungen, Fragen, Wünsche?<br>Schreib uns eine
+                </p>
+                <p class="u-text u-text-default u-text-palette-4-light-1 u-text-10">
                   <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-4-light-3 u-text-palette-4-light-1 u-btn-5" data-href="mailto:office@qinkel.com?subject=Fragen%2C%20Anregungen%2C%20W%C3%BCnsche" href="mailto:office@qinkel.com?subject=Fragen%2C%20Anregungen%2C%20W%C3%BCnsche"> Email.</a>
-                </h1>
+                </p>
               </div>
             </div>
           </div>
