--- a/src/thanks.njk
+++ b/src/thanks.njk
@@ -8,7 +8,7 @@ date: 2024-04-28
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-text u-text-custom-color-2 u-text-default u-text-1">Vielen Dank für deine Bestellung</h2>
         <p class="u-text u-text-default u-text-2"><br/>
-          Vielen Dank für deine Bestellung und viel Spaß mit deinen Qinkel® Maknetkugeln!<br/><br/>Wir melden uns umgehend bei dir mit den Informationen zum Versand.</p>
+          Vielen Dank für deine Bestellung und viel Spaß mit deinen Qinkel® Magnetkugeln!<br/><br/>Wir melden uns umgehend bei dir mit den Informationen zum Versand.</p>
 
         <p>Sollten Fragen oder Probleme auftreten, bitte kontaktiere uns unter <a href="office@qinkel.com">office@qinkel.com</a>.
         </p>
