permalinks für statische Seiten

--- a/src/Datenschutz.njk
+++ b/src/Datenschutz.njk
@@ -3,7 +3,8 @@ layout: layouts/base.njk
 title: "Qinkel Magnetkugeln - Datenschutz"
 description: "Datenschutzerklärung und Betroffenenrechte"
 slug: "datenschutz"
-date: 2024-04-28
+permalink: "/datenschutz.html"
+date: "2024-04-28"
 ---
     <section class="u-clearfix" id="sec-a226">
       <div class="u-clearfix u-sheet u-sheet-1">
