--- a/src/Impressum.njk
+++ b/src/Impressum.njk
@@ -3,6 +3,7 @@ layout: layouts/base.njk
 title: "Qinkel Magnetkugeln - Impressum"
 description: "Impressum und rechtliche Informationen zur Qinkel Webpräsenz"
 slug: impressum
+permalink: "/impressum.html"
 date: 2024-04-28
 ---
     <section class="u-clearfix" id="sec-a226">
