--- a/src/Rueckgabe.njk
+++ b/src/Rueckgabe.njk
@@ -3,7 +3,8 @@ layout: layouts/base.njk
 title: "Qinkel Magnetkugeln - Rückgabe"
 description: "Informationen zu Widerruf und Rückgabe von Qinkel Bestellungen"
 slug: "rueckgabe"
-date: 2024-05-02
+permalink: "/rueckgabe.html"
+date: "2024-05-02"
 ---
    <section class="u-clearfix" id="sec-a226">
       <div class="u-clearfix u-sheet u-sheet-1">
