--- a/src/garantie-registriert.njk
+++ b/src/garantie-registriert.njk
@@ -2,9 +2,9 @@
 layout: layouts/base.njk
 title: "Vielen Dank für Ihre Registrierung!"
 description: "Bestätigungsseite nach erfolgreicher Registrierung der Garantie"
-permalink: "/garantie-registriert.html"
 slug: "garantie-registriert"
-date: 2024-05-06
+permalink: "/garantie-registriert.html"
+date: "2024-05-06"
 ---
     <section class="u-clearfix" id="sec-a226">
       <div class="u-clearfix u-sheet u-sheet-1">
