--- a/src/kontakt.njk
+++ b/src/kontakt.njk
@@ -2,8 +2,9 @@
 layout: layouts/base.njk
 title: "Qinkel Magnetkugeln - Kontakt"
 description: "Kontakt und Verbesserungsvorschläge"
-slug: kontakt
-date: 2024-04-28
+slug: "kontakt"
+permalink: "/kontakt.html"
+date: "2024-04-28"
 ---
     <section class="u-clearfix" id="sec-a226">
       <div class="u-clearfix u-sheet u-sheet-1">
