--- a/src/shop.njk
+++ b/src/shop.njk
@@ -3,7 +3,8 @@ layout: layouts/base.njk
 title: "Qinkel Magnetkugeln - Shop"
 description: "Überblick über Produkte im Qinkel Magnetkugeln Webshop"
 slug: "shop"
-date: 2024-04-28
+permalink: "/shop.html"
+date: "2024-04-28"
 ---
   <section class="u-align-center u-clearfix u-section-3" style="background: white;">
     <!--div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1"-->
