--- a/src/thanks.njk
+++ b/src/thanks.njk
@@ -2,7 +2,8 @@
 layout: layouts/base.njk
 title: "Vielen Dank für Ihre Bestellung!"
 description: "Bestätigungsseite nach erfolgreicher Bestellung"
-date: 2024-04-28
+permalink: "/thanks.html"
+date: "2024-04-28"
 ---
     <section class="u-clearfix" id="sec-a226">
       <div class="u-clearfix u-sheet u-sheet-1">
